--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   font-family: "Courier New", monospace;
   width: 100%;
+  padding: 3rem;
 }
 
 h1 {
@@ -9,23 +10,22 @@ h1 {
   font-size: 42px;
 }
 
-.passwords {
+.messages-container {
   list-style: none;
   padding: 0;
-  font-size: 32px;
+  font-size: 14px;
   margin-bottom: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: auto;
+  width: 20%;
 }
 
-.more {
-  font-size: 32px;
-  font-family: "Courier New", monospace;
-  border: 2px solid #000;
-  background-color: #fff;
-  padding: 10px 25px;
+.message {
+  word-break: break-all;
 }
-.more:hover {
-  background-color: #FDD836;
-}
-.more:active {
-  background-color: #FFEFA9;
+
+.author {
+  font-weight: 600;
 }
